fix left scroll on mobile view

--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@ nav {
     display: grid;
     grid-template-columns: 1fr;
     grid-gap: 10px;
-    width: 100vw;
+    width: 100%;
   }
 
   .logo img {
@@ -384,7 +384,7 @@ nav {
 
 .deals {
   font-size: 1.6rem;
-  width: 100vw;
+  width: 100%;
 }
 
 .deals-cards {
@@ -859,7 +859,7 @@ nav {
   }
 
   .latest-rounds {
-    margin: 10px;
+    margin: 10px auto;
     width: 100%;
   }
 
